# PascalFTL

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  main.py  package-lock.json  package.json  pftl.db  pyproject.toml
.junie/: guidelines.md
app/: __init__.py  db.py  game.py  main.py  models.py  seed.py  ships.py  utils.py
app/core/: config.py
app/routers/: __init__.py  pages.py
app/static/css/: app.css  app_v2.css  tw.css
app/templates/: base.html  configure.html  create_game.html  game.html  game_over.html  home.html  join.html  lobby.html
app/templates/fragments/: game_actions.html  game_players.html  lobby_controls.html  lobby_players.html  ready_button.html
app/templates/images/: pascals_ftl_header.pxd  pascals_ftl_logo.pxd
tailwindcss/: package-lock.json  package.json
tailwindcss/styles/: app.css
